# chat-crossplatform

./: .gitignore  CMakeLists.txt  Output-Build.txt  README.md
chat_server/: CMakeLists.txt  User.c  User.h  boolean_type.h  chat_server.c  cross_platform_def.h  dbInterface.c  dbInterface.h  include.h  threads.c  threads.h
chat_server/lib_src/: vec.c
